--- a/.github/workflows/update-readme-stats.yml
+++ b/.github/workflows/update-readme-stats.yml
@@ -1,24 +1,25 @@
-name: Update README Stats
+name: Update GitHub Stats
 
 on:
   schedule:
-    - cron: '0 */12 * * *'  # Runs every 12 hours
-  workflow_dispatch:        # Allows manual trigger
+    - cron: "0 */12 * * *" # Runs every 12 hours
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repo
+      - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Generate GitHub Stats SVG
-        uses: anuraghazra/github-readme-stats@latest
-        with:
-          token: ${{ secrets.GH_README_STATS_TOKEN }}
-          count_private: true
-          show_icons: true
-          include_all_commits: true
-          cache_seconds: 1800
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_README_STATS_TOKEN }}
+      - name: Generate GitHub Stats
+        run: |
+          curl -o stats.svg "https://github-readme-stats.vercel.app/api?username=MathewX470&count_private=true&include_all_commits=true&theme=dark&hide_border=false&token=${{ secrets.GH_STATS_TOKEN }}"
+
+      - name: Commit and push
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add stats.svg
+          git commit -m "Update GitHub stats"
+          git push
