--- a/.github/workflows/update-readme-stats.yml
+++ b/.github/workflows/update-readme-stats.yml
@@ -14,7 +14,7 @@ jobs:
 
       - name: Generate GitHub Stats
         run: |
-          curl -o stats.svg "https://github-readme-stats.vercel.app/api?username=MathewX470&count_private=true&include_all_commits=true&theme=dark&hide_border=false&token=${{ secrets.GH_STATS_TOKEN }}"
+          curl -o stats.svg "https://github-readme-stats.vercel.app/api?username=MathewX470&count_private=true&include_all_commits=true&theme=dark&hide_border=false&token=${{ secrets.GH_README_STATS_TOKEN }}"
 
       - name: Commit and push
         run: |
